docs: prepare build system for multiple script interpreters

--- a/tex-example/example.tex
+++ b/tex-example/example.tex
@@ -113,7 +113,7 @@
     \centering
     \input{content/figure-velocity-profile.pgf}
     \vspace{\parskip}
-    \caption{Pipe flow velocity profile (Matplotlib)}
+    \caption{Pipe flow velocity profile}
 \end{figure}
 
 \section{Third section}
